# 40-Days-Basic-Python

./: README.md
Day-1/: Day-1.ipynb
Day-10/: Day-10.ipynb
Day-11/: Day-11.ipynb
Day-12/: Day-12.ipynb
Day-13/: Day-13.ipynb
Day-14/: Day-14.ipynb
Day-15/: Day-15.ipynb
Day-16/: Day-16.ipynb
Day-17/: Day-17.ipynb
Day-2/: Day-2.ipynb
Day-3/: Day-3.ipynb
Day-30/factorial-aivn-nam/: app.py  factorial.py  pyproject.toml
Day-30/factorial-aivn-nam/tests/: factorial-test.py
Day-30/factorial_nam/: app.py  factorial.py  pyproject.toml
Day-30/factorial_nam/tests/: factorial_test.py
Day-31/: Day-31.ipynb
Day-32-33/: Day-32-33.ipynb
Day-34/: Day-34.ipynb
Day-35/: Day-35.ipynb  database.sqlite  exercise.sqlite
Day-36/: Day-36.ipynb  product.sqlite  stock.sqlite
Day-37/: Day-37.ipynb
Day-38/: Day-38.ipynb
Day-38/wandb/run-20240411_110426-48ale7gv/: run-48ale7gv.wandb
Day-38/wandb/run-20240411_200106-8u0uf0rv/: run-8u0uf0rv.wandb
Day-38/wandb/run-20240411_200123-oymwp5c3/: run-oymwp5c3.wandb
Day-38/wandb/run-20240411_200456-5r6tte56/: run-5r6tte56.wandb
Day-38/wandb/run-20240412_111311-9oi1rwh2/: run-9oi1rwh2.wandb
Day-38/wandb/run-20240412_111414-r8rt12t9/: run-r8rt12t9.wandb
Day-38/wandb/run-20240412_111453-zs32xn5u/: run-zs32xn5u.wandb
Day-38/wandb/run-20240412_111612-zuwa2qop/: run-zuwa2qop.wandb
Day-39/: Day-39.ipynb  Day-39.py  is_prime.py
Day-4/: Day-4.ipynb
Day-5/: Day-5.ipynb
Day-6/: Day-6.ipynb
Day-7/: Day-7.ipynb
Day-8/: Day-8.ipynb
Day-9/: Day-9.ipynb
(+62 files in other folders)
