[tool.poetry]
name = "factorial-aivn-nam"
version = "0.1.0"
description = ""
authors = ["LeHoangNam <lenam1072004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
